# aoc25

./: CMakeLists.txt
aoc/: input.h
days/day01/: main.cpp
days/day02/: main.cpp
days/day03/: main.cpp
days/day04/: main.cpp
days/day05/: main.cpp
